--- a/vishivka/index.html
+++ b/vishivka/index.html
@@ -13,7 +13,6 @@
 <body>
 
 <!-- Header -->
-
 	<header class="header">
 		<div class="container">
 		 	<div class="row">
@@ -76,8 +75,7 @@
 <!-- Первая секция Главная -->
 
 	<section class="main">
-		<!-- <div class="container"> -->
-
+		<div class="container">
 			<div class="row">
 
 				<div class="col-5">
@@ -89,44 +87,40 @@
 
 				<div class="col-7">
 
-					<div class="slick-slider">
-					    <div class="slick-slider__item">
-					    	<img src="img/slider-main/01.jpg" alt="наши работы" class="slick-slider__img">
+					<div class="main-slider">
+					    <div class="main-slider__item">
+					    	<img src="img/slider-main/01.jpg" alt="наши работы" class="main-slider__img">
 					    </div>
-					    <div class="slick-slider__item">
-					    	<img src="img/slider-main/02.jpg" alt="наши работы" class="slick-slider__img">
+					    <div class="main-slider__item">
+					    	<img src="img/slider-main/02.jpg" alt="наши работы" class="main-slider__img">
 					  </div>
-					    <div class="slick-slider__item">
-					    	<img src="img/slider-main/03.jpg" alt="наши работы" class="slick-slider__img">
+					    <div class="main-slider__item">
+					    	<img src="img/slider-main/03.jpg" alt="наши работы" class="main-slider__img">
 					    </div>
-					    <div class="slick-slider__item">
-					    	<img src="img/slider-main/04.jpg" alt="наши работы" class="slick-slider__img">
+					    <div class="main-slider__item">
+					    	<img src="img/slider-main/04.jpg" alt="наши работы" class="main-slider__img">
 					    </div>
-					    <div class="slick-slider__item">
-					    	<img src="img/slider-main/05.jpg" alt="наши работы" class="slick-slider__img">
+					    <div class="main-slider__item">
+					    	<img src="img/slider-main/05.jpg" alt="наши работы" class="main-slider__img">
 					    </div>
-					    <div class="slick-slider__item">
-					    	<img src="img/slider-main/06.jpg" alt="наши работы" class="slick-slider__img">
+					    <div class="main-slider__item">
+					    	<img src="img/slider-main/06.jpg" alt="наши работы" class="main-slider__img">
 					    </div>
-					    <div class="slick-slider__item">
-					    	<img src="img/slider-main/07.jpg" alt="наши работы" class="slick-slider__img">
+					    <div class="main-slider__item">
+					    	<img src="img/slider-main/07.jpg" alt="наши работы" class="main-slider__img">
 					    </div>
-					    <div class="slick-slider__item">
-					    	<img src="img/slider-main/08.jpg" alt="наши работы" class="slick-slider__img">
+					    <div class="main-slider__item">
+					    	<img src="img/slider-main/08.jpg" alt="наши работы" class="main-slider__img">
 					    </div>
-					    <div class="slick-slider__item">
-					    	<img src="img/slider-main/09.jpg" alt="наши работы" class="slick-slider__img">
+					    <div class="main-slider__item">
+					    	<img src="img/slider-main/09.jpg" alt="наши работы" class="main-slider__img">
 					    </div>
 					  </div>
 
-					<!-- <div class="main-logo">
-						<img class="main-logo__img" src="img/logo.png" alt="логотип">
-					</div> -->
 				</div>
 				
 			</div>
-
-		<!-- </div> -->
+		</div>
 	</section>
 
 <!-- Футер -->
@@ -190,9 +184,10 @@
 		</div>
 	</div>
 
-<script src="js/jquery-3.6.3.min.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/slick.min.js"></script>
+<!-- Подключение js -->
+	<script src="js/jquery-3.6.3.min.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/slick.min.js"></script>
 
 <!-- инициализация модального окна -->
 	<script>
@@ -212,7 +207,7 @@
 			});
 
 			// Слайдер слик
-				$('.slick-slider').slick({
+				$('.main-slider').slick({
 				  dots: false,
 				  infinite: true,
 				  speed: 500,
@@ -225,5 +220,6 @@
 
 		});
 	</script>
+
 </body>
 </html>
