--- a/vishivka/services/shevron.html
+++ b/vishivka/services/shevron.html
@@ -11,177 +11,176 @@
 </head>
 <body>
 
+<!-- Header -->
+	<header class="header">
+		<div class="container">
+		 	<div class="row">
+			 	<nav class="nav">
+	 		
+		 			<div class="col-2">
+		 				<div class="logo">
+		 					<img class="logo__img" src="../img/logo-txt.svg" alt="Логотип">
+		 				</div>
+		 			</div>
 
-	<!-- Header -->
+		 			<div class="col-3 offset-7">
+		 				<div class="social">
 
-		<header class="header">
-			<div class="container">
-			 	<div class="row">
-				 	<nav class="nav">
-		 		
-			 			<div class="col-2">
-			 				<div class="logo">
-			 					<img class="logo__img" src="../img/logo-txt.svg" alt="Логотип">
-			 				</div>
-			 			</div>
+		 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 
-			 			<div class="col-3 offset-7">
-			 				<div class="social">
+		 					<a class="social__link_vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 
-			 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+		 					<a class="social__link_instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 
-			 					<a class="social__link_vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+		 					<a href="#" class="main-link main-btn social__btn popup-btn">Заказать</a>
 
-			 					<a class="social__link_instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+		 				</div>
+		 			</div>
 
-			 					<a href="#" class="main-link main-btn social__btn popup-btn">Заказать</a>
+					<hr>
 
-			 				</div>
-			 			</div>
+	 			</nav>
+	 		</div>
 
-						<hr>
+	 		<div class="row">
+	 			<div class="col-10 offset-1">
+	 				<ul class="nav-list">
+	 					<li class="nav-list-item">
+ 							<a class="main-link" href="../index.html">Главная</a>
+ 						</li>
+ 						<li class="nav-list-item">
+	 						<a class="main-link" href="../about.html">О нас</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link main-link_active" href="../services.html">Услуги</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="../portfolio.html">Наши работы</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="../info.html">Информация</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="../contacts.html">Контакты</a>
+	 					</li>
+	 				</ul>
+	 			</div>	
+	 		</div>
+	 		<hr id="hr__down">
 
-		 			</nav>
-		 		</div>
-
-		 		<div class="row">
-		 			<div class="col-10 offset-1">
-		 				<ul class="nav-list">
-		 					<li class="nav-list-item">
-	 							<a class="main-link" href="../index.html">Главная</a>
-	 						</li>
-	 						<li class="nav-list-item">
-		 						<a class="main-link" href="../about.html">О нас</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link main-link_active" href="../services.html">Услуги</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="../portfolio.html">Наши работы</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="../info.html">Информация</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="../contacts.html">Контакты</a>
-		 					</li>
-		 				</ul>
-		 			</div>	
-		 		</div>
-		 		<hr id="hr__down">
-
-			</div>
-		</header>
+		</div>
+	</header>
 
 <!-- Услуги -->
-<section class="services">
-	<div class="container">
-		<div class="section-header">
-			<h2 class="title text-start">Услуги</h2>
-		</div>
+	<section class="services">
+		<div class="container">
+			<div class="section-header">
+				<h2 class="title text-start">Услуги</h2>
+			</div>
 
-		<aside class="side-bar">
-			<ul class="services-list">
-				<li class="services-list-item">
-					<a href="../services.html" class="main-link services__link">Вышивка</a>
-				</li>
-				<li class="services-list-item">
-					<a href="flex-flok.html" class="main-link services__link">Печать флексом, флоком</a>
-				</li>
-				<li class="services-list-item">
-					<a href="sublimacion.html" class="main-link services__link">Сублимационная печать</a>
-				</li>
-				<li class="services-list-item">
-					<a href="shevron.html" class="main-link services__link main-link_active">Шеврон</a>
-				</li>
-			</ul>
-		</aside>
+			<aside class="side-bar">
+				<ul class="side-bar-list">
+					<li class="side-bar-list__item">
+						<a class="main-link side-bar__link" href="../services.html">Вышивка</a>
+					</li>
+					<li class="side-bar-list__item">
+						<a class="main-link side-bar__link" href="flex-flok.html">Печать флексом, флоком</a>
+					</li>
+					<li class="side-bar-list__item">
+						<a class="main-link side-bar__link" href="sublimacion.html">Сублимационная печать</a>
+					</li>
+					<li class="side-bar-list__item">
+						<a class="main-link side-bar__link main-link_active" href="shevron.html">Шеврон</a>
+					</li>
+				</ul>
+			</aside>
+
+			<div class="row">
+				<div class="col-8 offset-4">
+					<img class="services__img" src="../img/shevron.jpg" alt="Шеврон">
+					<h3 class="title">Шеврон</h3>
+					<p class="txt">	<b>Шеврон (нашивка)</b> — это тканевый отрезок различной формы с нанесенным изображением.
+
+		<b>Типы шевронов в зависимости от технологии изображения:</b>
+
+		<b>1. Сублимационные</b>
+			В качестве основы выступает габардин или фетр, на который с помощью 
+			сублимации чаще всего наносится полноцветное изображение.
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-8 offset-4">
+					<div class="services__post-block">
+						<div class="row">
+							<div class="col-4">
+								<img class="services__post-img" src="shevron-img/sublima-shevron/01.jpg" alt="сублимационный шеврон">
+							</div>
+							<div class="col-4">
+								<img class="services__post-img" src="shevron-img/sublima-shevron/02.jpg" alt="сублимационный шеврон">
+							</div>
+							<div class="col-4">
+								<img class="services__post-img" src="shevron-img/sublima-shevron/03.jpg" alt="сублимационный шеврон">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
 		<div class="row">
-			<div class="col-8 offset-4">
-				<img class="services__img" src="../img/shevron.jpg" alt="Шеврон">
-				<h3 class="title">Шеврон</h3>
-				<p class="txt">	<b>Шеврон (нашивка)</b> — это тканевый отрезок различной формы с нанесенным изображением.
-
-<b>Типы шевронов в зависимости от технологии изображения:</b>
-
-	<b>1. Сублимационные</b>
-		В качестве основы выступает габардин или фетр, на который с помощью 
-		сублимации чаще всего наносится полноцветное изображение.
+				<div class="col-8 offset-4">
+			<p class="txt">	<b>2. Вышитые</b>
+			Изображение вышивается специальными износостойкими нитями. 
+			Данный тип подходит для множества логотипов и текстовой информации.
 				</p>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-8 offset-4">
-				<div class="services__post-block">
-					<div class="row">
-						<div class="col-4">
-							<img class="services__post-img" src="shevron-img/sublima-shevron/01.jpg" alt="сублимационный шеврон">
-						</div>
-						<div class="col-4">
-							<img class="services__post-img" src="shevron-img/sublima-shevron/02.jpg" alt="сублимационный шеврон">
-						</div>
-						<div class="col-4">
-							<img class="services__post-img" src="shevron-img/sublima-shevron/03.jpg" alt="сублимационный шеврон">
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-	<div class="row">
-			<div class="col-8 offset-4">
-		<p class="txt">	<b>2. Вышитые</b>
-		Изображение вышивается специальными износостойкими нитями. 
-		Данный тип подходит для множества логотипов и текстовой информации.
-			</p>
-		</div>
-	</div>
-		<div class="row">
-			<div class="col-8 offset-4">
-				<div class="services__post-block">
-					<div class="row">
-						<div class="col-4">
-							<img class="services__post-img" src="shevron-img/01.jpg" alt="шеврон">
-						</div>
-						<div class="col-4">
-							<img class="services__post-img" src="shevron-img/02.jpg" alt="шеврон">
-						</div>
-						<div class="col-4">
-							<img class="services__post-img" src="shevron-img/03.jpeg" alt="шеврон">
+			<div class="row">
+				<div class="col-8 offset-4">
+					<div class="services__post-block">
+						<div class="row">
+							<div class="col-4">
+								<img class="services__post-img" src="shevron-img/01.jpg" alt="шеврон">
+							</div>
+							<div class="col-4">
+								<img class="services__post-img" src="shevron-img/02.jpg" alt="шеврон">
+							</div>
+							<div class="col-4">
+								<img class="services__post-img" src="shevron-img/03.jpeg" alt="шеврон">
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		
-		<div class="row">
-			<div class="col-8 offset-4">
-<p class="txt"><b>Также шевроны могут различаться по способу крепления к основе:</b>
+			
+			<div class="row">
+				<div class="col-8 offset-4">
+		<p class="txt"><b>Также шевроны могут различаться по способу крепления к основе:</b>
 
-	— <b>Пришивные.</b> Шеврон с помощью обметки по периметру крепится к одежде
-		 или изделию;
+		— <b>Пришивные.</b> Шеврон с помощью обметки по периметру крепится к одежде
+			 или изделию;
 
-	— <b>Клеевые.</b> Шеврон с помощью промежуточного материала (клеевой ленты)
-		приклеивается к одежде или изделию;
+		— <b>Клеевые.</b> Шеврон с помощью промежуточного материала (клеевой ленты)
+			приклеивается к одежде или изделию;
 
-	— <b>На липучке (контактной ленте).</b> Такой тип крепления чаще всего используется
-		для униформы военных или специальных служб.
+		— <b>На липучке (контактной ленте).</b> Такой тип крепления чаще всего используется
+			для униформы военных или специальных служб.
 
-<b>Преимущества применения шевронов:</b>
+		<b>Преимущества применения шевронов:</b>
 
-	— могут использоваться для тиражей от 1 шт.;
+		— могут использоваться для тиражей от 1 шт.;
 
-	— шеврон имеет презентабельный внешний вид;
+		— шеврон имеет презентабельный внешний вид;
 
-	— получается высококачественное и износостойкое изображение, которое не теряет
-		внешний вид годами.</p>
+		— получается высококачественное и износостойкое изображение, которое не теряет
+			внешний вид годами.</p>
+				</div>
 			</div>
 		</div>
-	</div>
-</section>
+	</section>
 
 <hr>
+
 <!-- Футер -->
 	<footer class="footer">
 		<div class="container">
@@ -228,8 +227,9 @@
 		</div>
 	</div>
 
-<script src="js/jquery-3.6.3.min.js"></script>
-<script src="js/bootstrap.js"></script>
+<!-- Подключение js -->
+	<script src="js/jquery-3.6.3.min.js"></script>
+	<script src="js/bootstrap.js"></script>
 
 <!-- инициализация модального окна -->
 	<script>
@@ -249,12 +249,6 @@
 			});
 		});
 	</script>
-
-
-
-
-
-
 
 
 </body>
