--- a/vishivka/services/sublimacion.html
+++ b/vishivka/services/sublimacion.html
@@ -11,132 +11,131 @@
 </head>
 <body>
 
+<!-- Header -->
+	<header class="header">
+		<div class="container">
+		 	<div class="row">
+			 	<nav class="nav">
+	 		
+		 			<div class="col-2">
+		 				<div class="logo">
+		 					<img class="logo__img" src="../img/logo-txt.svg" alt="Логотип">
+		 				</div>
+		 			</div>
 
-	<!-- Header -->
+		 			<div class="col-3 offset-7">
+		 				<div class="social">
 
-		<header class="header">
-			<div class="container">
-			 	<div class="row">
-				 	<nav class="nav">
-		 		
-			 			<div class="col-2">
-			 				<div class="logo">
-			 					<img class="logo__img" src="../img/logo-txt.svg" alt="Логотип">
-			 				</div>
-			 			</div>
+		 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 
-			 			<div class="col-3 offset-7">
-			 				<div class="social">
+		 					<a class="social__link_vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 
-			 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+		 					<a class="social__link_instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 
-			 					<a class="social__link_vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+		 					<a href="#" class="main-link main-btn social__btn popup-btn">Заказать</a>
 
-			 					<a class="social__link_instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+		 				</div>
+		 			</div>
 
-			 					<a href="#" class="main-link main-btn social__btn popup-btn">Заказать</a>
+					<hr>
 
-			 				</div>
-			 			</div>
+	 			</nav>
+	 		</div>
 
-						<hr>
+	 		<div class="row">
+	 			<div class="col-10 offset-1">
+	 				<ul class="nav-list">
+	 					<li class="nav-list-item">
+ 							<a class="main-link" href="../index.html">Главная</a>
+ 						</li>
+ 						<li class="nav-list-item">
+	 						<a class="main-link" href="../about.html">О нас</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link main-link_active" href="../services.html">Услуги</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="../portfolio.html">Наши работы</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="../info.html">Информация</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="../contacts.html">Контакты</a>
+	 					</li>
+	 				</ul>
+	 			</div>	
+	 		</div>
+	 		<hr id="hr__down">
 
-		 			</nav>
-		 		</div>
-
-		 		<div class="row">
-		 			<div class="col-10 offset-1">
-		 				<ul class="nav-list">
-		 					<li class="nav-list-item">
-	 							<a class="main-link" href="../index.html">Главная</a>
-	 						</li>
-	 						<li class="nav-list-item">
-		 						<a class="main-link" href="../about.html">О нас</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link main-link_active" href="../services.html">Услуги</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="../portfolio.html">Наши работы</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="../info.html">Информация</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="../contacts.html">Контакты</a>
-		 					</li>
-		 				</ul>
-		 			</div>	
-		 		</div>
-		 		<hr id="hr__down">
-
-			</div>
-		</header>
+		</div>
+	</header>
 
 <!-- Услуги -->
-<section class="services">
-	<div class="container">
-		<div class="section-header">
-			<h2 class="title text-start">Услуги</h2>
-		</div>
-
-		<aside class="side-bar">
-			<ul class="services-list">
-				<li class="services-list-item">
-					<a href="../services.html" class="main-link services__link">Вышивка</a>
-				</li>
-				<li class="services-list-item">
-					<a href="flex-flok.html" class="main-link services__link">Печать флексом, флоком</a>
-				</li>
-				<li class="services-list-item">
-					<a href="sublimacion.html" class="main-link services__link  main-link_active">Сублимационная печать</a>
-				</li>
-				<li class="services-list-item">
-					<a href="shevron.html" class="main-link services__link">Шеврон</a>
-				</li>
-			</ul>
-		</aside>
-
-		<div class="row">
-			<div class="col-8 offset-4">
-				<img class="services__img" src="../img/sublimacion.png" alt="Вышивка">
-				<h3 class="title">Сублимационная печать</h3>
-				<p class="txt">	Метод непрямой полноцветной печати на светлых синтетических тканях, содержащих не менее 60% полиэстера, или на изделиях из двуслойных материалов (внутренний слой — хлопок, внешний — полиэстер).
-
-	Изображение сначала наносится на специальную бумагу, а затем с помощью термопресса при температуре 180-200°C на запечатываемую поверхность. Изображения получаются яркими, насыщенными и износостойкими. Краска проникает в волокна, что обеспечивает устойчивость к выцветанию, стиркам и механическим воздействиям. 
-
-	<b>Применение сублимационной печати:</b>
-		— подходит для тиражей от 1 шт.;
-
-		— позволяет получить износостойкий принт фотографического качества;
-
-		— происходит на изделиях, в составе которых более 60% синтетики.
-		   </p>
+	<section class="services">
+		<div class="container">
+			<div class="section-header">
+				<h2 class="title text-start">Услуги</h2>
 			</div>
-		</div>
 
-		<div class="row">
-			<div class="col-8 offset-4">
-				<div class="services__post-block">
-					<div class="row">
-						<div class="col-4">
-							<img class="services__post-img" src="sublimacion-img/01.jpg" alt="сублимация">
-						</div>
-						<div class="col-4">
-							<img class="services__post-img" src="sublimacion-img/02.jpg" alt="сублимация">
-						</div>
-						<div class="col-4">
-							<img class="services__post-img" src="sublimacion-img/03.jpg" alt="сублимация">
+			<aside class="side-bar">
+				<ul class="side-bar-list">
+					<li class="side-bar-list__item">
+						<a class="main-link side-bar__link" href="../services.html">Вышивка</a>
+					</li>
+					<li class="side-bar-list__item">
+						<a class="main-link side-bar__link" href="flex-flok.html">Печать флексом, флоком</a>
+					</li>
+					<li class="side-bar-list__item">
+						<a class="main-link side-bar__link  main-link_active" href="sublimacion.html">Сублимационная печать</a>
+					</li>
+					<li class="side-bar-list__item">
+						<a class="main-link side-bar__link" href="shevron.html">Шеврон</a>
+					</li>
+				</ul>
+			</aside>
+
+			<div class="row">
+				<div class="col-8 offset-4">
+					<img class="services__img" src="../img/sublimacion.png" alt="Вышивка">
+					<h3 class="title">Сублимационная печать</h3>
+					<p class="txt">	Метод непрямой полноцветной печати на светлых синтетических тканях, содержащих не менее 60% полиэстера, или на изделиях из двуслойных материалов (внутренний слой — хлопок, внешний — полиэстер).
+
+		Изображение сначала наносится на специальную бумагу, а затем с помощью термопресса при температуре 180-200°C на запечатываемую поверхность. Изображения получаются яркими, насыщенными и износостойкими. Краска проникает в волокна, что обеспечивает устойчивость к выцветанию, стиркам и механическим воздействиям. 
+
+		<b>Применение сублимационной печати:</b>
+			— подходит для тиражей от 1 шт.;
+
+			— позволяет получить износостойкий принт фотографического качества;
+
+			— происходит на изделиях, в составе которых более 60% синтетики.
+			   </p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-8 offset-4">
+					<div class="services__post-block">
+						<div class="row">
+							<div class="col-4">
+								<img class="services__post-img" src="sublimacion-img/01.jpg" alt="сублимация">
+							</div>
+							<div class="col-4">
+								<img class="services__post-img" src="sublimacion-img/02.jpg" alt="сублимация">
+							</div>
+							<div class="col-4">
+								<img class="services__post-img" src="sublimacion-img/03.jpg" alt="сублимация">
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-	</div>
-</section>
+		</div>
+	</section>
 
 <hr>
+
 <!-- Футер -->
 	<footer class="footer">
 		<div class="container">
@@ -183,8 +182,9 @@
 		</div>
 	</div>
 
-<script src="js/jquery-3.6.3.min.js"></script>
-<script src="js/bootstrap.js"></script>
+<!-- Подключение js -->
+	<script src="js/jquery-3.6.3.min.js"></script>
+	<script src="js/bootstrap.js"></script>
 
 <!-- инициализация модального окна -->
 	<script>
