--- a/vishivka/services/flex-flok.html
+++ b/vishivka/services/flex-flok.html
@@ -46,22 +46,22 @@
 	 			<div class="col-10 offset-1">
 	 				<ul class="nav-list">
 	 					<li class="nav-list-item">
- 							<a class="main-link" href="index.html">Главная</a>
+ 							<a class="main-link" href="../index.html">Главная</a>
  						</li>
  						<li class="nav-list-item">
-	 						<a class="main-link" href="about.html">О нас</a>
+	 						<a class="main-link" href="../about.html">О нас</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a class="main-link main-link_active" href="services.html">Услуги</a>
+	 						<a class="main-link main-link_active" href="../services.html">Услуги</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a class="main-link" href="portfolio.html">Наши работы</a>
+	 						<a class="main-link" href="p../ortfolio.html">Наши работы</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a class="main-link" href="info.html">Информация</a>
+	 						<a class="main-link" href="../info.html">Информация</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a class="main-link" href="contacts.html">Контакты</a>
+	 						<a class="main-link" href="../contacts.html">Контакты</a>
 	 					</li>
 	 				</ul>
 	 			</div>	
