--- a/vishivka/portfolio/hoody.html
+++ b/vishivka/portfolio/hoody.html
@@ -89,28 +89,28 @@
 						<a href="hoody.html" class="main-link main-link_active side-bar__link">Толстовки</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Свитшоты</a>
+						<a href="sweetshot.html" class="main-link side-bar__link">Свитшоты</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Футболки</a>
+						<a href="t-shirt.html" class="main-link side-bar__link">Футболки</a>
 					</li>
 					<li class="side-bar-list__item">
-							<a href="#" class="main-link side-bar__link">Поло</a>
+							<a href="polo" class="main-link side-bar__link">Поло</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Халаты, полотенца</a>
+						<a href="bathrobe.html" class="main-link side-bar__link">Халаты, полотенца</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Шеврон</a>
+						<a href="shevron.html" class="main-link side-bar__link">Шеврон</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Сублимационный шеврон</a>
+						<a href="sub-shevron.html" class="main-link side-bar__link">Сублимационный шеврон</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Кепки, шапки</a>
+						<a href="caps.html" class="main-link side-bar__link">Кепки, шапки</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Рюкзаки</a>
+						<a href="backpacks.html" class="main-link side-bar__link">Рюкзаки</a>
 					</li>
 				
 				</ul>
@@ -875,7 +875,7 @@
 				
 			<div class="row">
 				<div class="col-12">
-					<p class="footer__txt">Hoody_196 2023 &copy; Все права защищены. Копирование любых графических и текстовых материалов запрещено. Продолжая просмотр сайта, вы соглашаетесь на обработку персональных данных передаваемых через форму.</p>
+					<p class="footer__txt">Vishivka_196 2023 &copy; Все права защищены. Копирование любых графических и текстовых материалов запрещено. Продолжая просмотр сайта, вы соглашаетесь на обработку персональных данных передаваемых через форму.</p>
 				</div>
 			</div>
 
