--- a/vishivka/portfolio/sweetshot.html
+++ b/vishivka/portfolio/sweetshot.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Вышивка</title>
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/uicons-brands.css">
-	<link rel="stylesheet" href="css/uicons-solid-rounded.css">
-	<link rel="stylesheet" href="css/slick.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/bootstrap.css">
+	<link rel="stylesheet" href="../css/uicons-brands.css">
+	<link rel="stylesheet" href="../css/uicons-solid-rounded.css">
+	<link rel="stylesheet" href="../css/slick.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -20,20 +20,20 @@
 	 		
 		 			<div class="col-2">
 		 				<div class="logo">
-		 					<img class="logo__img" src="img/logo-txt.svg" alt="Логотип">
+		 					<img class="logo__img" src="../img/logo-txt.svg" alt="Логотип">
 		 				</div>
 		 			</div>
 
 		 			<div class="col-3 offset-7">
 		 				<div class="social">
 
-		 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+		 					<a class="social__link_whatsapp" href="../https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 
-		 					<a class="social__link_vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+		 					<a class="social__link_vk" href="../https://vk.com/sweetshot__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 
-		 					<a class="social__link_instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+		 					<a class="social__link_instagram" href="../https://instagram.com/sweetshot_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 
-		 					<a href="#" class="main-link main-btn social__btn popup-btn">Заказать</a>
+		 					<a href="../#" class="main-link main-btn social__btn popup-btn">Заказать</a>
 
 		 				</div>
 		 			</div>
@@ -47,22 +47,22 @@
 	 			<div class="col-10 offset-1">
 	 				<ul class="nav-list">
 	 					<li class="nav-list-item">
- 							<a class="main-link" href="index.html">Главная</a>
+ 							<a class="main-link" href="../index.html">Главная</a>
  						</li>
  						<li class="nav-list-item">
-	 						<a class="main-link" href="about.html">О нас</a>
+	 						<a class="main-link" href="../about.html">О нас</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a class="main-link" href="services.html">Услуги</a>
+	 						<a class="main-link" href="../services.html">Услуги</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a class="main-link  main-link_active" href="portfolio.html">Наши работы</a>
+	 						<a class="main-link main-link_active" href="../portfolio.html">Наши работы</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a class="main-link" href="info.html">Информация</a>
+	 						<a class="main-link" href="../info.html">Информация</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a class="main-link" href="contacts.html">Контакты</a>
+	 						<a class="main-link" href="../contacts.html">Контакты</a>
 	 					</li>
 	 				</ul>
 	 			</div>	
@@ -83,34 +83,34 @@
 			<aside class="side-bar">
 				<ul class="side-bar-list">
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link main-link_active side-bar__link">Разная вышивка</a>
+						<a href="../portfolio.html" class="main-link side-bar__link">Разная вышивка</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Толстовки</a>
+						<a href="hoody.html" class="main-link side-bar__link">Толстовки</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Свитшоты</a>
+						<a href="sweetshot.html" class="main-link main-link_active side-bar__link">Свитшоты</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Футболки</a>
+						<a href="t-shirt.html" class="main-link side-bar__link">Футболки</a>
 					</li>
 					<li class="side-bar-list__item">
-							<a href="#" class="main-link side-bar__link">Поло</a>
+							<a href="polo.html" class="main-link side-bar__link">Поло</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Халаты, полотенца</a>
+						<a href="bathrobe.html" class="main-link side-bar__link">Халаты, полотенца</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Шеврон</a>
+						<a href="shevron.html" class="main-link side-bar__link">Шеврон</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Сублимационный шеврон</a>
+						<a href="sub-shevron.html" class="main-link side-bar__link">Сублимационный шеврон</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Кепки, шапки</a>
+						<a href="caps.html" class="main-link side-bar__link">Кепки, шапки</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="#" class="main-link side-bar__link">Рюкзаки</a>
+						<a href="backpacks.html" class="main-link side-bar__link">Рюкзаки</a>
 					</li>
 				
 				</ul>
@@ -121,41 +121,78 @@
 					<!-- Начало слайдера большой блок -->
 					<div class="portfolio-slider">
 <!-- 01 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img" src="img/slider-port/vishivka/01.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img" src="../img/slider-port/sweetshot/01.jpg" alt="вышивка">
 					  </div>
 <!-- 02 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img" src="img/slider-port/vishivka/02.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img" src="../img/slider-port/sweetshot/02.jpg" alt="вышивка">
 					  </div>
 <!-- 03 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img" src="img/slider-port/vishivka/03.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img" src="../img/slider-port/sweetshot/03.jpg" alt="вышивка">
 					  </div>
 <!-- 04 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img" src="img/slider-port/vishivka/04.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img" src="../img/slider-port/sweetshot/04.jpg" alt="вышивка">
 					  </div>
 <!-- 05 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img" src="img/slider-port/vishivka/05.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img" src="../img/slider-port/sweetshot/05.jpg" alt="вышивка">
 					  </div>
 
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/06.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/07.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/08.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/09.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/10.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/11.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/12.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/13.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/14.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/15.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/16.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/17.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/18.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/19.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/20.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/21.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/22.jpg" alt="вышивка" class="portfolio-slider__img"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/23.jpg" alt="вышивка" class="portfolio-slider__img"></div>
 					<!-- Продолжение слайдера большой блок -->
 
 					</div>
 					<!-- Начало слайдера миниатюр -->
 					<div class="portfolio-slider_nav">
 <!-- 01 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img-nav" src="img/slider-port/vishivka/01.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img-nav" src="../img/slider-port/sweetshot/01.jpg" alt="вышивка">
 					  </div>
 <!-- 02 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img-nav" src="img/slider-port/vishivka/02.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img-nav" src="../img/slider-port/sweetshot/02.jpg" alt="вышивка">
 					  </div>
 <!-- 03 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img-nav" src="img/slider-port/vishivka/03.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img-nav" src="../img/slider-port/sweetshot/03.jpg" alt="вышивка">
 					  </div>
 <!-- 04 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img-nav" src="img/slider-port/vishivka/04.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img-nav" src="../img/slider-port/sweetshot/04.jpg" alt="вышивка">
 					  </div>
 <!-- 05 --><div class="portfolio-slider__item">
-					  	<img class="portfolio-slider__img-nav" src="img/slider-port/vishivka/05.jpg" alt="вышивка">
+					  	<img class="portfolio-slider__img-nav" src="../img/slider-port/sweetshot/05.jpg" alt="вышивка">
 					  </div>
+
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/06.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/07.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/08.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/09.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/10.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/11.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/12.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/13.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/14.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/15.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/16.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/17.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/18.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/19.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/20.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/21.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/22.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
+					  <div class="portfolio-slider__item"><img src="../img/slider-port/sweetshot/23.jpg" alt="вышивка" class="portfolio-slider__img-nav"></div>
 
 						<!-- Продолжение слайдера миниатюрки -->
 
@@ -183,7 +220,7 @@
 
 			<div class="row">
 				<div class="col-3 offset-9">
-					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
+					<p class="footer__txt">Разработка сайта: <a href="../https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
 
@@ -218,9 +255,9 @@
 	</div>
 
 <!-- Подключение  js -->
-	<script src="js/jquery-3.6.3.min.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/slick.min.js"></script>
+	<script src="../js/jquery-3.6.3.min.js"></script>
+	<script src="../js/bootstrap.js"></script>
+	<script src="../js/slick.min.js"></script>
 
 <!-- инициализация модального окна, слайдера -->
 	<script>
