--- a/vishivka/index.html
+++ b/vishivka/index.html
@@ -18,13 +18,13 @@
 		 	<div class="row">
 			 	<nav class="nav">
 	 		
-		 			<div class="col-2">
+		 			<div class="col-md-2 offset-md-0 col-2 offset-1">
 		 				<div class="logo">
 		 					<img class="logo__img" src="img/logo-txt.svg" alt="Логотип">
 		 				</div>
 		 			</div>
 
-		 			<div class="col-3 offset-7">
+		 			<div class="col-lg-3 offset-lg-7 col-md-4 offset-md-6 col-7 offset-1">
 		 				<div class="social">
 
 		 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
@@ -44,7 +44,7 @@
 	 		</div>
 
 	 		<div class="row">
-	 			<div class="col-10 offset-1">
+	 			<div class="col-md-10 offset-md-1 col-sm-12">
 	 				<ul class="nav-list">
 	 					<li class="nav-list-item">
  							<a class="main-link main-link_active" href="index.html">Главная</a>
@@ -78,14 +78,14 @@
 		<div class="container">
 			<div class="row">
 
-				<div class="col-5">
+				<div class="col-md-5">
 					<div class="main-wrapper">
 						<h1 class="main__header">Вышивка на заказ!</h1>
 						<p class="main__subtitle">По вашему макету или картинке!</p>
 					</div>
 				</div>
 
-				<div class="col-7">
+				<div class="col-md-7 offset-md-0 col-10 offset-1">
 
 					<div class="main-slider">
 					    <div class="main-slider__item">
@@ -127,7 +127,7 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-2 offset-5">
+				<div class="col-md-2 offset-md-5 col-4 offset-4">
 
 					<div class="footer-block">
 					
@@ -149,7 +149,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-3 offset-9">
+				<div class="col-sm-6 offset-sm-6 col-12">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
