--- a/vishivka/portfolio.html
+++ b/vishivka/portfolio.html
@@ -86,31 +86,31 @@
 						<a href="#" class="main-link main-link_active side-bar__link">Разная вышивка</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="/portfolio/hoody.html" class="main-link side-bar__link">Толстовки</a>
+						<a href="portfolio/hoody.html" class="main-link side-bar__link">Толстовки</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="/portfolio/sweetshot.html" class="main-link side-bar__link">Свитшоты</a>
+						<a href="portfolio/sweetshot.html" class="main-link side-bar__link">Свитшоты</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="/portfolio/t-shirt.html" class="main-link side-bar__link">Футболки</a>
+						<a href="portfolio/t-shirt.html" class="main-link side-bar__link">Футболки</a>
 					</li>
 					<li class="side-bar-list__item">
-							<a href="/portfolio/polo.html" class="main-link side-bar__link">Поло</a>
+							<a href="portfolio/polo.html" class="main-link side-bar__link">Поло</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="/portfolio/bathrobe.html" class="main-link side-bar__link">Халаты, полотенца</a>
+						<a href="portfolio/bathrobe.html" class="main-link side-bar__link">Халаты, полотенца</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="/portfolio/shevron.html" class="main-link side-bar__link">Шеврон</a>
+						<a href="portfolio/shevron.html" class="main-link side-bar__link">Шеврон</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="/portfolio/sub-shevron.html" class="main-link side-bar__link">Сублимационный шеврон</a>
+						<a href="portfolio/sub-shevron.html" class="main-link side-bar__link">Сублимационный шеврон</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="/portfolio/caps.html" class="main-link side-bar__link">Кепки, шапки</a>
+						<a href="portfolio/caps.html" class="main-link side-bar__link">Кепки, шапки</a>
 					</li>
 					<li class="side-bar-list__item">
-						<a href="/portfolio/backpacks.html" class="main-link side-bar__link">Рюкзаки</a>
+						<a href="portfolio/backpacks.html" class="main-link side-bar__link">Рюкзаки</a>
 					</li>
 				
 				</ul>
