--- a/vishivka/about.html
+++ b/vishivka/about.html
@@ -11,69 +11,69 @@
 </head>
 <body>
 
-	<!-- Header -->
+<!-- Header -->
 
-		<header class="header">
-			<div class="container">
-			 	<div class="row">
-				 	<nav class="nav">
+	<header class="header">
+		<div class="container">
+		 	<div class="row">
+			 	<nav class="nav">
 
-			 			<div class="col-2">
-			 				<div class="logo">
-			 					<img class="logo__img" src="img/logo-txt.svg" alt="Логотип">
-			 				</div>
-			 			</div>
+		 			<div class="col-md-2 offset-md-0 col-2 offset-1">
+		 				<div class="logo">
+		 					<img class="logo__img" src="img/logo-txt.svg" alt="Логотип">
+		 				</div>
+		 			</div>
 
-			 			<div class="col-3 offset-7">
-			 				<div class="social">
+		 			<div class="col-lg-3 offset-lg-7 col-md-4 offset-md-6 col-7 offset-1">
+		 				<div class="social">
 
-			 					<a class="main-link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+		 					<a class="main-link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 
-			 					<a class="main-link_vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+		 					<a class="main-link_vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 
-			 					<a class="main-link_instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+		 					<a class="main-link_instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 
-			 					<a href="#" class="main-link main-btn social__btn popup-btn">Заказать</a>
+		 					<a href="#" class="main-link main-btn social__btn popup-btn">Заказать</a>
 
-			 				</div>
-			 			</div>
+		 				</div>
+		 			</div>
 
-						<hr>
+					<hr>
 
-		 			</nav>
-		 		</div>
+	 			</nav>
+	 		</div>
 
-		 		<div class="row">
+	 		<div class="row">
 
-		 			<div class="col-10 offset-1">
-		 				<ul class="nav-list">
-		 					<li class="nav-list-item">
-	 							<a class="main-link" href="index.html">Главная</a>
-	 						</li>
-	 						<li class="nav-list-item">
-		 						<a class="main-link main-link_active" href="about.html">О нас</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="services.html">Услуги</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="portfolio.html">Наши работы</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="info.html">Информация</a>
-		 					</li>
-		 					<li class="nav-list-item">
-		 						<a class="main-link" href="contacts.html">Контакты</a>
-		 					</li>
-		 				</ul>
-		 			</div>	
+	 			<div class="col-md-10 offset-md-1 col-sm-12">
+	 				<ul class="nav-list">
+	 					<li class="nav-list-item">
+ 							<a class="main-link" href="index.html">Главная</a>
+ 						</li>
+ 						<li class="nav-list-item">
+	 						<a class="main-link main-link_active" href="about.html">О нас</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="services.html">Услуги</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="portfolio.html">Наши работы</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="info.html">Информация</a>
+	 					</li>
+	 					<li class="nav-list-item">
+	 						<a class="main-link" href="contacts.html">Контакты</a>
+	 					</li>
+	 				</ul>
+	 			</div>	
 
-		 		</div>
+	 		</div>
 
-		 		<hr id="hr__down">
+	 		<hr id="hr__down">
 
-			</div>
-		</header>
+		</div>
+	</header>
 
 <!-- О нас секция -->
 	<section class="about">
@@ -113,7 +113,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-3 offset-9">
+				<div class="col-sm-6 offset-sm-6 col-12">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
